# commando

./: CDB_SPEC.md  Cargo.toml  LICENSE.md  README.md
src/: argparser.rs  colors.rs  error.rs  main.rs  pacutils.rs
src/database/: alpm.rs  cdb.rs  mod.rs
