[package]
name = "commando"
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/DumbMahreeo/commando"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
compress-tools = "0.12.3"
lazy-regex = "2.3.0"
reqwest = {version = "0.11.11", features = ["blocking"]}
tar = "0.4.38"
