[package]
name = "arch-commando"
version = "0.4.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/DumbMahreeo/commando"
description = "A fast, locate-like utility to search for commands in Arch Linux repos"

[dependencies]
byteorder = "1.4.3"
clap = { version = "3.2.12", features = ["derive"] }
compress-tools = "0.12.3"
lazy-regex = "2.3.0"
reqwest = {version = "0.11.11", features = ["blocking"]}

[[bin]]
name = "commando"
path = "src/main.rs"

[profile.release]
opt-level = "s"
strip = true
