[package]
name = "arch-commando"
version = "0.5.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/DumbMahreeo/commando"
description = "A fast, locate-like utility to search for commands in Arch Linux repos"

[dependencies]
byteorder = "1.4.3"
clap = { version = "3.2.12", features = ["derive"] }
compress-tools = "0.12.3"
lazy-regex = "2.3.0"
reqwest = { version = "0.11.11", features = ["blocking"] }
log = "0.4"
env_logger = "0.9"
thiserror = "1"
futures = "0.3.24"
bytes = "1.2.1"
tokio = { version = "1.21.0", features = ["rt-multi-thread"] }

[[bin]]
name = "commando"
path = "src/main.rs"

[profile.release]
opt-level = "s"
strip = true
lto = true
